--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
