--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
