--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
