--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^10.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
