--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
     "@vueuse/core": "^10.7.1",
     "pinia": "^2.1.7",
     "primevue": "^3.46.0",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
     "vue-toastification": "^2.0.0-rc.5",
     "vue-uuid": "^3.0.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
